fix: Made the Request objects more null-safe fixes: #2280
chore: Migrated to a more Java 21 code style
chore: Removed the "Proprietary" request options.